# ChatGptCli

./: Cargo.toml  README.md
src/: api.rs  cli.rs  controller.rs  main.rs  model.rs
